<resources>
    <string name="contentupload_service_name"> GLS - SUBIDA DE CONTENIDO </string>
    <string name="app_name">GLS-GESTIÓN MÓVIL</string>
    <string name="main_screen_menu_service"> URL - FTP </string>
    <string name="main_screen_menu_syncronize"> SINC. MÓDULOS</string>
    <string name="title_activity_main"> GESTIÓN MÓVIL</string>
    <string name="top_bar_text"> TOP BAR TEXT </string>
    <string name="login_label_top"> LOGIN </string>
    <string name="login_btn_login"> INGRESAR </string>
    <string name="profile_label_header"> PERFILES </string>
    <string name="configuration_label_header"> CONFIGURACIONES </string>
    <string name="search_label_header"> BÚSQUEDA </string>
    <string name="filter_label_header"> FILTRO DEL LISTADO </string>
    <string name="order_label_header"> ORDEN DEL LISTADO </string>
    <string-array name="list_configuration">
        <item name="item_search">@string/label_configuration_search</item>
        <item name="item_order">@string/label_configuration_order</item>
        <item name="item_filter">@string/label_configuration_filter</item>
    </string-array>
    <string name="label_configuration_search"> BÚSQUEDA </string>
    <string name="label_configuration_order"> ORDENAMIENTO </string>
    <string name="label_configuration_filter"> FILTRO </string>
    <string-array name="list_filter">
        <item name="item_pending">@string/label_filter_pending</item>
        <item name="item_in_progress">@string/label_filter_in_progress</item>
        <item name="item_executed">@string/label_filter_executed</item>
        <item name="item_finalized">@string/label_filter_finalized</item>
        <item name="item_all">@string/label_filter_all</item>
    </string-array>
    <string name="label_filter_pending"> PENDIENTES </string>
    <string name="label_filter_in_progress"> EN PROGRESO </string>
    <string name="label_filter_executed"> EJECUTADOS </string>
    <string name="label_filter_finalized"> FINALIZADOS </string>
    <string name="label_filter_all"> TODOS </string>
    <string name="label_simple_filter_pending"> PENDIENTES </string>
    <string name="label_simple_filter_in_progress"> EN PROGRESO </string>
    <string name="label_simple_filter_executed"> EJECUTADOS </string>
    <string name="label_simple_filter_finalized"> FINALIZADOS </string>
    <string name="label_simple_filter_all"> TODOS </string>
    <string name="photo_manager_screen_menu_exit"> [S]SALIR </string>
    <string name="photo_manager_screen_menu_delete"> [E]ELIMINAR </string>
    <string name="photo_manager_screen_menu_add"> [A]AGREGAR </string>
    <string-array name="list_main">
        <item name="item_view_list">@string/title_view_list</item>
        <item name="item_synchronize_load">@string/title_synchronize_load</item>
        <item name="item_change_profile">@string/title_change_profile</item>
        <item name="item_view_summary">@string/title_view_summary</item>
        <item name="item_session_logout">@string/title_session_logout</item>
    </string-array>
    <string name="title_view_list"> LISTADO DE CARGA</string>
    <string name="title_synchronize_load"> SINCRONIZACIÓN </string>
    <string name="title_change_profile"> CAMBIO DE PERFIL </string>
    <string name="title_view_summary"> AVANCE </string>
    <string name="title_session_logout"> CERRAR SESIÓN </string>
    <string-array name="list_profile">
        <item name="item_communication">@string/title_distribution</item>
        <item name="item_distribution">@string/title_communication</item>
        <item name="item_inspection">@string/title_inspection</item>
        <item name="item_state">@string/title_state</item>
        <item name="item_meter">@string/title_meter</item>
        <item name="item_persuasive">@string/title_persuasive</item>
        <item name="item_clandestine">@string/title_clandestine</item>
    </string-array>
    <string name="title_distribution"> DISTRIBUCIÓN </string>
    <string name="title_communication"> COMUNICACIÓN </string>
    <string name="title_inspection"> INSPECCIÓN </string>
    <string name="title_state"> TOMA DE ESTADO</string>
    <string name="title_meter"> MEDIDORES </string>
    <string name="title_persuasive"> ACCIONES PERSUASIVAS </string>
    <string name="title_clandestine"> CLANDESTINOS </string>
    <string name="lbl_dialog_login_download">LOGUEANDO USUARIO</string>
    <string name="lbl_login_username">USUARIO</string>
    <string name="lbl_login_password">CONTRASEÑA</string>
    <string name="lbl_loading_prepare">PREPARÁNDOSE PARA LA DESCARGA</string>
    <string name="lbl_loading_config_dwn">DESCARGANDO CONFIGURACIÓN</string>
    <string name="lbl_loading_config_par">PARSEANDO CONFIGURACIÓN</string>
    <string name="lbl_loading_config_sav">GUARDANDO CONFIGURACIÓN</string>
    <string name="lbl_loading_userinfo_dwn">DESCARGANDO INFORMACIÓN DEL USUARIO</string>
    <string name="lbl_loading_payload_dwn">DESCARGANDO CARGA DEL DÍA</string>
    <string name="lbl_loading_payload_par">PARSEANDO CARGA DEL DÍA</string>
    <string name="lbl_loading_payload_sav">GUARDANDO CARGA DEL DÍA</string>
    <string name="lbl_deleting_all_info">BORRANDO LA INFORMACIÓN ANTERIOR</string>
    <string name="dialog_btn_close">CERRAR</string>
    <string name="dialog_positive_button">ACEPTAR</string>
    <string name="dialog_negative_button">CANCELAR</string>
    <string name="dialog_no_title">SIN TÍTULO</string>
    <string name="dialog_no_message">SIN COMENTARIO</string>
    <string name="dialog_title_error_login">E001 - DATOS INVALIDOS O CONEXION NO ESTABLECIDA</string>
    <string name="dialog_message_error_login">REINTENTAR DE NUEVO POR FAVOR</string>
    <string name="dialog_title_error_network">E002 - CONEXION NO ESTABLECIDA</string>
    <string name="dialog_message_error_network">NO SE ENCUENTRA CONECTADO A INTERNET</string>
    <string name="dialog_title_error_config_download">E003 - INTERRUPCION EN LA CONFIGURACIÓN</string>
    <string name="dialog_message_error_config_download">NO SE COMPLETÓ LA DESCARGA DE CONFIGURACIÓN</string>
    <string name="dialog_title_error_config_parse">E004 - INTERRUPCION AL FORMAR LOS DATOS</string>
    <string name="dialog_message_error_config_parse">NO SE COMPLETÓ EL PARSEO DE CONFIGURACIÓN</string>
    <string name="dialog_title_error_info_download">E005 - INTERRUPCION EN LA DESCARGA DE INFORMACION</string>
    <string name="dialog_message_error_info_download">NO SE COMPLETÓ LA DESCARGA DE INFORMACIÓN</string>
    <string name="dialog_title_error_info_parse">E006 - SINCRONIZACION</string>
    <string name="dialog_message_error_info_parse">SINCRONIZACION COMPLETADA PERO NO SE ENCONTRO REGISTROS ASIGNADOS</string>
    <string name="dialog_title_error_unsynced_payload">LISTADO DE CARGA</string>
    <string name="dialog_message_error_unsynced_payload">NO SE HA SINCRONIZADO LA CARGA DEL DÍA</string>
    <string name="dialog_title_error_search_not_found">LA BÚSQUEDA DEL SUMINISTRO</string>
    <string name="dialog_message_error_search_not_found">NO SE ENCONTRÓ EL SUMINISTRO INDICADO</string>
    <string name="dialog_title_error_qr_search_not_found">QR NO ENCONTRADO</string>
    <string name="dialog_message_error_qr_search_not_found">EL REGISTRO NO SE ENCONTRÓ EN LA LISTA</string>
    <string name="dialog_title_error_option_undefined">OPCION INVALIDA</string>
    <string name="dialog_message_error_option_undefined">LA OPCIÓN INGRESADA NO ESTA ENTRE LAS POSIBLES</string>
    <string name="dialog_title_confirm_sync">CONFIRMAR SINCRONIZACIÓN</string>
    <string name="dialog_message_confirm_sync">¿DESEA VOLVER A SINCRONIZAR LA CARGA DEL DÍA?</string>
    <string name="dialog_title_confirm_back">¿CONFIRMAR SALIR?</string>
    <string name="dialog_message_confirm_back">SE PERDERÁ LO AVANZADO EN EL REGISTRO</string>
    <string name="dialog_title_confirm_logout">¿CONFIRMAR SALIR DE LA SESIÓN?</string>
    <string name="dialog_message_confirm_logout">CONFIRMAR QUE DESEA SALIR DE LA APLICACIÓN</string>
    <string name="dialog_title_photo_sent_error">ELIMINAR FOTO YA REGISTRADA</string>
    <string name="dialog_message_photo_sent_error">SE ESTA INTENTANDO ELIMINAR UNA FOTO QUE YA FUE REGISTRADA</string>
    <string name="dialog_title_login_more_chars">LOGUEO NO VALIDO</string>
    <string name="dialog_message_login_more_chars">SE REQUIERE UN MINIMO DE 3 CARACTERES PARA LOGUEAR</string>
    <string name="dialog_title_error_time_format">FECHAS INCORRECTAS</string>
    <string name="dialog_message_error_time_format">EL FORMATO NO ES EL CORRECTO</string>
    <string name="dialog_title_error_time_incongruence">HORAS INCONGRUENTES</string>
    <string name="dialog_message_error_time_incongruence">LA HORA DE INICIO ES MAYOR A LA DE FIN</string>
    <string name="dialog_title_error_time_out_flux">HORA DE EJECUCIÓN FUERA DE RANGO</string>
    <string name="dialog_message_error_time_out_flux">LA ACTIVIDAD DEBE EJECUTARSE EN EL HORARIO ESTABLECIDO.</string>
    <string name="dialog_title_error_time_conflicts">CONFLICTO CON REGISTROS TRABAJADOS</string>
    <string name="dialog_message_error_time_conflicts">LAS HORAS ENTRAN EN CONFLICTO CON LO YA TRABAJADO</string>
    <string name="dialog_title_error_reading_empty">LECTURA VACÍA</string>
    <string name="dialog_message_error_reading_empty">EL INPUT DE LECTURA NO DEBE SER VACÍO</string>
    <string name="dialog_title_input_empty">INPUT VACÍO</string>
    <string name="dialog_message_input_empty">NO ESTÁ PERMITIDO DEJAR VACÍO ESTE INPUT</string>
    <string name="dialog_title_input_not_minimun">INPUT INFERIOR AL MÍNIMO</string>
    <string name="dialog_message_input_not_minimun">LA CANTIDAD DE CARACTERES ES INFERIOR AL MÍNIMO DE LA PREGUNTA</string>
    <string name="dialog_title_process_started">ACTIVIDAD INICIADA</string>
    <string name="dialog_message_process_started">SE HA INICIADO LA EJECUCIÓN DE LA TAREA.</string>
    <string name="dialog_title_user_without_modules">USUARIO SIN MÓDULOS</string>
    <string name="dialog_message_user_without_modules">EL USUARIO ACTUAL NO TIENE ASOCIADO NINGÚN MÓDULO</string>
    <string name="dialog_title_validation_not_passed">NO SE CUMPLIÓ CON VALIDACIÓN</string>
    <string name="dialog_message_validation_not_passed">NO SE CUMPLIÓ CON LA VALIDACIÓN PARA LA PREGUNTA RESPECTIVA</string>
    <string name="dialog_title_gps_disabled">GPS DESACTIVADO</string>
    <string name="dialog_message_gps_disabled">SE DEBE ACTIVAR EL GPS PARA CONTINUAR, ACTÍVELO Y PRESIONE REGRESAR</string>
    <string name="dialog_title_custom_error">ERROR EN LA PREGUNTA</string>
    <string name="dialog_title_photo_manager_error">GALERÍA DE IMÁGENES</string>
    <string name="lbl_dangerous_zone_no">[ Z ] Z.P. (NO)</string>
    <string name="lbl_dangerous_zone_yes">[ Z ] Z.P. (SI)</string>
    <string name="dialog_dangerous_zone_lbl_start_time">INICIO</string>
    <string name="dialog_dangerous_zone_lbl_end_time">FIN</string>
    <string name="dialog_dangerous_zone_button_cancel">CANCELAR</string>
    <string name="dialog_dangerous_zone_button_accept">ACEPTAR</string>
    <string name="search_label">GLS-GESTIÓN MÓVIL</string>
    <string name="search_hint">BUSCAR</string>
    <string name="search_threshold">1</string>
    <string name="btn_display_map">[ M ] MOSTRAR TECLADO</string>
    <string name="maps_certificate">80:45:B5:F4:AA:05:74:9E:A8:BF:AE:4C:64:0E:76:5B</string>
    <string name="maps_apikey">0KIJZ8hxkdNbdjaWzPk3ak8RYWQeoPmZs3y56Lg</string>
    <string name="lbl_endanswer_title">¿DESEA TERMINAR Y GUARDAR LOS CAMBIOS?</string>
    <string name="lbl_endanswer_button_no">CANCELAR</string>
    <string name="lbl_endanswer_button_yes">ACEPTAR</string>
    <string name="notification_title_content">ENVIANDO CONTENIDO AL SERVIDOR</string>
    <string name="notification_title_photos">ENVIANDO FOTOS AL SERVIDOR</string>
    <string name="notification_uploading_message">REGISTROS TERMINADOS Y FOTOS ADJUNTADAS</string>
</resources>